Fix csv order and improve analysis

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -208,67 +208,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Beamforming"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from evaluate_data import evaluate_data\n",
-    "\n",
-    "fname = 'results/static_spectra.pkl'\n",
-    "result_df = evaluate_data(fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.pcolormesh(df.timestamp_s, angles, np.log(das_spectrum))\n",
-    "plt.axhline(gt_degrees, color='orange')\n",
-    "plt.xlabel('time [s]')\n",
-    "plt.ylabel('angle [deg]')\n",
-    "plt.title(f'DAS {combine}')\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.pcolormesh(df.timestamp_s, angles, np.log(mvdr_spectrum))\n",
-    "plt.axhline(gt_degrees, color='orange')\n",
-    "plt.xlabel('time [s]')\n",
-    "plt.ylabel('angle [deg]')\n",
-    "plt.title(f'MVDR {combine}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.pcolormesh(angles, freqs, np.log(das_spectrum_all))\n",
-    "plt.axvline(gt_degrees, color='orange')\n",
-    "plt.title('DAS')\n",
-    "plt.xlabel('angle [deg]')\n",
-    "plt.ylabel('frequency [Hz]')\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.pcolormesh(angles, freqs, np.log(mvdr_spectrum_all))\n",
-    "plt.axvline(gt_degrees, color='orange')\n",
-    "plt.title('MVDR')\n",
-    "plt.xlabel('angle [deg]')\n",
-    "plt.ylabel('frequency [Hz]')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Plot results"
    ]
   },
@@ -278,9 +217,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = 'results/static_spectra.pkl'\n",
-    "result_df = pd.read_pickle(fname)\n",
-    "angles = np.linspace(0, 360, 181)"
+    "def filter_df_by_dict(result_df, this_dict, verbose=False):\n",
+    "    this_df = result_df.copy()\n",
+    "    for key, val in this_dict.items():\n",
+    "        if not len(this_df.loc[this_df[key]==val]):\n",
+    "            if verbose:\n",
+    "                print(f'did not find any {key}=={val} in results. Available: {this_df[key].unique()}')\n",
+    "        this_df = this_df.loc[this_df[key]==val]\n",
+    "        if not len(this_df): # can stop filtering, already empty\n",
+    "            break\n",
+    "    return this_df\n",
+    "\n",
+    "def plot_spectrum(full_spectrum, title='', ax=None):\n",
+    "    angles = np.linspace(0, 360, full_spectrum.shape[0])\n",
+    "    if ax is None:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    else:\n",
+    "        fig = plt.gcf()\n",
+    "        \n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    ax.pcolormesh(range(full_spectrum.shape[1]), angles, np.log(full_spectrum))\n",
+    "    ax.set_xlabel('time idx [-]')\n",
+    "    ax.set_ylabel('angle [deg]')\n",
+    "    ax.set_title(title)\n",
+    "\n",
+    "#fname = 'results/static_spectra.pkl'\n",
+    "fname = 'results/static_spectra_raw.pkl'\n",
+    "#fname = 'results/snr_test.pkl'\n",
+    "try:\n",
+    "    result_df = pd.read_pickle(fname)\n",
+    "except FileNotFoundError: \n",
+    "    print('Did not find {fname}. Did you run evaluate_data.py? ')"
    ]
   },
   {
@@ -294,7 +261,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -319,30 +286,18 @@
     "    this_dict[\"method\"] = method\n",
     "    this_dict[\"combine\"] = combine\n",
     "    this_dict[\"normalize\"] = normalize\n",
-    "    \n",
-    "    this_df = result_df.copy()\n",
-    "    for key, val in this_dict.items():\n",
-    "        if not len(this_df.loc[this_df[key]==val]):\n",
-    "            print(f'did not find any {key}=={val} in results. Available: {this_df[key].unique()}')\n",
-    "        this_df = this_df.loc[this_df[key]==val]\n",
-    "        if not len(this_df):\n",
-    "            break\n",
+    "    this_df = filter_df_by_dict(result_df, this_dict)\n",
     "            \n",
     "    if not len(this_df):\n",
     "        continue \n",
     "        \n",
-    "        \n",
     "    # angles x times\n",
     "    full_spectrum = np.array([*this_df.loc[:, \"spectrum\"]]).T\n",
+    "    title = f\"{degree} deg, method:{method}, normalize:{normalize}, combine:{combine}\"\n",
     "    \n",
-    "    fig = plt.figure()\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    plt.pcolormesh(range(full_spectrum.shape[1]), angles, np.log(full_spectrum))\n",
-    "    plt.colorbar()\n",
-    "    plt.axhline(gt_degree, color='orange', ls=':')\n",
-    "    plt.xlabel('time idx [-]')\n",
-    "    plt.ylabel('angle [deg]')\n",
-    "    plt.title(f\"{degree} deg, method:{method}, normalize:{normalize}, combine:{combine}\")"
+    "    fig, ax = plt.subplots()\n",
+    "    plot_spectrum(full_spectrum, title=title, ax=ax)\n",
+    "    ax.axhline(gt_degree, color='orange', ls=':')"
    ]
   },
   {
@@ -355,29 +310,118 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "base_dict = dict(\n",
     "    motors=False,\n",
     "    props=False,\n",
-    "    snr=None, # will be set later\n",
-    "    degrees=None, # will be set later\n",
+    "    # fill from above \n",
     "    method='mvdr',\n",
-    "    combine='product'\n",
+    "    combine='sum',\n",
+    "    normalize='zero_to_one',\n",
+    "    snr=None, \n",
+    "    degree=None, # will be set later\n",
     ")\n",
     "\n",
-    "this_dict = base_dict.copy()\n",
-    "this_dict[\"degree\"] = degree\n",
-    "this_dict[\"snr\"] = snr"
+    "for degree, snr in itertools.product(degree_list, [False, True]):\n",
+    "    gt_degree = 180 - degree\n",
+    "    \n",
+    "    this_dict = base_dict.copy()\n",
+    "    this_dict[\"degree\"] = degree\n",
+    "    this_dict[\"snr\"] = snr \n",
+    "    this_df = filter_df_by_dict(result_df, this_dict)\n",
+    "            \n",
+    "    if not len(this_df):\n",
+    "        continue \n",
+    "        \n",
+    "    # angles x times\n",
+    "    full_spectrum = np.array([*this_df.loc[:, \"spectrum\"]]).T\n",
+    "    title = f\"{degree} deg, snr:{snr}\"\n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    plot_spectrum(full_spectrum, title=title, ax=ax)\n",
+    "    ax.axhline(gt_degree, color='orange', ls=':')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## C. motors, no filtering: does it help to use high-SNR bins? "
+    "## C. motors: what filtering helps? "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.gridspec as gridspec\n",
+    "    \n",
+    "base_dict = dict(\n",
+    "    motors=True,\n",
+    "    # fill from above \n",
+    "    method='mvdr',\n",
+    "    combine='sum',\n",
+    "    normalize='zero_to_one',\n",
+    "    degree=None, \n",
+    "    snr=None, \n",
+    "    props=None, # will be filled later\n",
+    ")\n",
+    "\n",
+    "for degree, snr, props in itertools.product(degree_list, [False, True], [False, True]):\n",
+    "    gt_degree = 180 - degree\n",
+    "    this_dict = base_dict.copy()\n",
+    "    this_dict[\"degree\"] = degree\n",
+    "    this_dict[\"snr\"] = snr \n",
+    "    this_dict[\"props\"] = props\n",
+    "    this_df = filter_df_by_dict(result_df, this_dict)\n",
+    "            \n",
+    "    if not len(this_df):\n",
+    "        continue \n",
+    "        \n",
+    "    # angles x times\n",
+    "    full_spectrum = np.array([*this_df.loc[:, \"spectrum\"]]).T\n",
+    "    title = f\"{degree} deg, snr:{snr}, props:{props}\"\n",
+    "    angles = np.linspace(0, 360, full_spectrum.shape[0])\n",
+    "    \n",
+    "    fig = plt.figure(constrained_layout=True)\n",
+    "    spec = gridspec.GridSpec(ncols=3, nrows=1, figure=fig, width_ratios=[3, 1, 1])\n",
+    "    ax0 = fig.add_subplot(spec[0, 0])\n",
+    "    ax1 = fig.add_subplot(spec[0, 1], sharey=ax0)\n",
+    "    ax2 = fig.add_subplot(spec[0, 2], sharey=ax0)\n",
+    "    \n",
+    "    plot_spectrum(full_spectrum, title=title, ax=ax0)\n",
+    "    ax0.axhline(gt_degree, color='orange', ls=':')\n",
+    "    \n",
+    "    ax1.plot(np.sum(full_spectrum, axis=1), angles)\n",
+    "    ax1.axhline(gt_degree, color='orange', ls=':')\n",
+    "    ax1.set_title('sum')\n",
+    "    \n",
+    "    ax2.plot(np.product(full_spectrum, axis=1), angles)\n",
+    "    ax2.axhline(gt_degree, color='orange', ls=':')\n",
+    "    ax2.set_title('product')\n",
+    "    #axs[1].invert_xaxis()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## D. try smarter schemes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
