Add frequencies to evaluate_data

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -54,7 +54,32 @@
     "        fig, ax = plt.subplots()\n",
     "    ax.semilogy(df.timestamp_s, df.sound_level, label=label)\n",
     "    ax.set_xlabel('time [s]')\n",
-    "    ax.set_ylabel('sound level')"
+    "    ax.set_ylabel('sound level')\n",
+    "    \n",
+    "def read_df_from_wav(fname):\n",
+    "    import wavio\n",
+    "    from scipy.signal import stft\n",
+    "    w = wavio.read(fname)\n",
+    "    source_data = w.data\n",
+    "    \n",
+    "    n_buffer = 1024\n",
+    "\n",
+    "    f, t, source_stft = stft(source_data, w.rate, nperseg=n_buffer, axis=0)\n",
+    "    source_stft = source_stft.transpose([1, 0, 2]) # channels x frequencies x times\n",
+    "    source_freq = np.fft.rfftfreq(n=n_buffer, d=1/w.rate)\n",
+    "\n",
+    "    df = pd.DataFrame(columns=df_source.columns)\n",
+    "    for i in range(source_stft.shape[2]):\n",
+    "        df.loc[len(df), :] = {\n",
+    "            \"index\": i,\n",
+    "            \"timestamp\": i * 1024 /w.rate * 1000, # miliseconds\n",
+    "            \"n_mics\": 2,\n",
+    "            \"topic\": \"measurement_mic\",\n",
+    "            \"signals_f\": source_stft[:, :, i], \n",
+    "            \"frequencies\": source_freq,\n",
+    "            \"n_frequencies\": len(source_freq)\n",
+    "        }\n",
+    "    return df"
    ]
   },
   {
@@ -115,30 +140,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_df_from_wav(fname):\n",
-    "    import wavio\n",
-    "    from scipy.signal import stft\n",
-    "    w = wavio.read(fname)\n",
-    "    source_data = w.data\n",
-    "    \n",
-    "    n_buffer = 1024\n",
-    "\n",
-    "    f, t, source_stft = stft(source_data, w.rate, nperseg=n_buffer, axis=0)\n",
-    "    source_stft = source_stft.transpose([1, 0, 2]) # channels x frequencies x times\n",
-    "    source_freq = np.fft.rfftfreq(n=n_buffer, d=1/w.rate)\n",
-    "\n",
-    "    df = pd.DataFrame(columns=df_source.columns)\n",
-    "    for i in range(source_stft.shape[2]):\n",
-    "        df.loc[len(df), :] = {\n",
-    "            \"index\": i,\n",
-    "            \"timestamp\": i * 1024 /w.rate * 1000, # miliseconds\n",
-    "            \"n_mics\": 2,\n",
-    "            \"topic\": \"measurement_mic\",\n",
-    "            \"signals_f\": source_stft[:, :, i], \n",
-    "            \"frequencies\": source_freq,\n",
-    "            \"n_frequencies\": len(source_freq)\n",
-    "        }\n",
-    "    return df\n",
     "\n",
     "fname_source = f'{WAV_DIRNAME}/crazyflie_audio_measurements_nomotors_nosnr_noprops_source_45.wav'\n",
     "fname_all =    f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_source_45.wav'\n",
@@ -217,6 +218,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import itertools\n",
+    "from evaluate_data import degree_list, method_list, combine_list, normalize_list\n",
+    "\n",
     "def filter_df_by_dict(result_df, this_dict, verbose=False):\n",
     "    this_df = result_df.copy()\n",
     "    for key, val in this_dict.items():\n",
@@ -265,9 +269,6 @@
    },
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "from evaluate_data import degree_list, method_list, combine_list, normalize_list\n",
-    "\n",
     "base_dict = dict(\n",
     "    motors=False,\n",
     "    props=False,\n",
@@ -311,7 +312,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -357,15 +358,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "import matplotlib.gridspec as gridspec\n",
+    "from audio_stack.spectrum_estimator import combine_rows\n",
     "    \n",
     "base_dict = dict(\n",
     "    motors=True,\n",
-    "    # fill from above \n",
     "    method='mvdr',\n",
     "    combine='sum',\n",
     "    normalize='zero_to_one',\n",
@@ -399,11 +400,11 @@
     "    plot_spectrum(full_spectrum, title=title, ax=ax0)\n",
     "    ax0.axhline(gt_degree, color='orange', ls=':')\n",
     "    \n",
-    "    ax1.plot(np.sum(full_spectrum, axis=1), angles)\n",
+    "    ax1.plot(combine_rows(full_spectrum.T, \"sum\"), angles)\n",
     "    ax1.axhline(gt_degree, color='orange', ls=':')\n",
     "    ax1.set_title('sum')\n",
     "    \n",
-    "    ax2.plot(np.product(full_spectrum, axis=1), angles)\n",
+    "    ax2.plot(combine_rows(full_spectrum.T, \"product\"), angles)\n",
     "    ax2.axhline(gt_degree, color='orange', ls=':')\n",
     "    ax2.set_title('product')\n",
     "    #axs[1].invert_xaxis()"
@@ -413,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## D. try smarter schemes "
+    "## D. Understand why SNR selection is not helping"
    ]
   },
   {
@@ -421,14 +422,108 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base_dict = dict(\n",
+    "    motors=True,\n",
+    "    method='mvdr',\n",
+    "    combine='sum',\n",
+    "    normalize='zero_to_one',\n",
+    "    degree=20, \n",
+    "    props=True, \n",
+    "    snr=None, # will be filled later\n",
+    ")\n",
+    "\n",
+    "n_times = 4\n",
+    "\n",
+    "for snr, in itertools.product([False, True]):\n",
+    "    this_dict = base_dict.copy()\n",
+    "    this_dict[\"snr\"] = snr \n",
+    "    this_df = filter_df_by_dict(result_df, this_dict, verbose=False)\n",
+    "    \n",
+    "    if not len(this_df):\n",
+    "        continue \n",
+    "        \n",
+    "    raw_spectrum = np.array([*this_df.loc[:, \"spectrum_raw\"]]).T\n",
+    "    raw_spectrum = raw_spectrum.transpose(0, 2, 1) # angles x times x frequencies\n",
+    "    \n",
+    "    gt_degree = 180 - this_dict[\"degree\"]\n",
+    "    angles = np.linspace(0, 360, raw_spectrum.shape[0])\n",
+    "    \n",
+    "    fig, axs = plt.subplots(1, n_times+2, sharey=True)\n",
+    "    fig.suptitle(f\"snr:{snr}\")\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    for i in range(n_times):\n",
+    "        raw_spectrum_flat = raw_spectrum[:, -i, :]\n",
+    "        \n",
+    "        frequencies = this_df.iloc[i].frequencies\n",
+    "        axs[i].pcolormesh(frequencies, angles, raw_spectrum_flat)\n",
+    "        axs[i].set_title(f\"time -{i}\")\n",
+    "        axs[i].axhline(gt_degree, color='orange', ls=':')\n",
+    "        \n",
+    "    raw_spectrum_sum = np.sum(raw_spectrum[:, -n_times:, :].reshape(raw_spectrum.shape[0],-1), axis=1)\n",
+    "    raw_spectrum_product = np.sum(np.log10(raw_spectrum[:, -n_times:, :]).reshape(raw_spectrum.shape[0],-1), axis=1)\n",
+    "    axs[-2].plot(raw_spectrum_sum, angles)\n",
+    "    axs[-1].plot(raw_spectrum_product, angles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## E. Understand which frequency bins the SNR scheme picks (and try to pick better ones)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# should pick propeller signals:\n",
+    "df_snr_noprops = read_df(degree=0, props=False, snr=True, motors=True, source=True)\n",
+    "\n",
+    "# should pick between propellers (but maybe still too close?)\n",
+    "df_snr_props = read_df(degree=0, props=True, snr=True, motors=True, source=True)\n",
+    "\n",
+    "# should pick uniformly\n",
+    "df_nosnr_noprops = read_df(degree=0, props=False, snr=False, motors=True, source=True)\n",
+    "\n",
+    "fname_props =  f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
+    "df_props = read_df_from_wav(fname_props)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = 0\n",
+    "fig, ax = plt.subplots()\n",
+    "for df, label in zip([df_snr_noprops, df_snr_props, df_nosnr_noprops], [\"props\", \"between\", \"uniform\"]):\n",
+    "    normalized_spec = np.sum(np.abs(df.loc[time].signals_f), axis=0)\n",
+    "    normalized_spec -= np.min(normalized_spec)\n",
+    "    normalized_spec /= np.max(normalized_spec)\n",
+    "    ax.scatter(df.loc[time].frequencies, normalized_spec, label=label)\n",
+    "    \n",
+    "normalized_spec = np.sum(np.abs(df_props.iloc[0].signals_f), axis=0)\n",
+    "normalized_spec -= np.min(normalized_spec)\n",
+    "normalized_spec /= np.max(normalized_spec)\n",
+    "ax.plot(df_props.iloc[0].frequencies, normalized_spec, color=\"C3\", label='measurement mics')\n",
+    "#ax.set_yscale('log')\n",
+    "ax.legend()\n",
+    "ax.set_xlim([0, 7000])\n",
+    "fig.set_size_inches(10, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## F. Average over time\n",
+    "\n",
+    "Take the average of a few samples over time, considering the drone's movement. Plot the angle estimate vs. ground truth over time. "
+   ]
   }
  ],
  "metadata": {
