Move dynamic spectrum estimation to BeamFormer

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -512,7 +512,7 @@
     "ax.plot(df_props.iloc[0].frequencies, normalized_spec, color=\"C3\", label='measurement mics')\n",
     "#ax.set_yscale('log')\n",
     "ax.legend()\n",
-    "ax.set_xlim([0, 7000])\n",
+    "ax.set_xlim([0, 4000])\n",
     "fig.set_size_inches(10, 5)"
    ]
   },
@@ -523,6 +523,98 @@
     "## F. Average over time\n",
     "\n",
     "Take the average of a few samples over time, considering the drone's movement. Plot the angle estimate vs. ground truth over time. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from audio_stack.beam_former import BeamFormer\n",
+    "from audio_stack.spectrum_estimator import normalize_rows\n",
+    "\n",
+    "base_dict = dict(\n",
+    "    motors=True,\n",
+    "    method='mvdr',\n",
+    "    combine='sum',\n",
+    "    normalize='zero_to_one',\n",
+    "    degree=0, # 20 does not exist\n",
+    "    props=False, \n",
+    "    snr=False, # will be filled later\n",
+    ")\n",
+    "\n",
+    "n_times = 4\n",
+    "combination_n = 3\n",
+    "combination_method = \"sum\"\n",
+    "normalization_method = \"none\"\n",
+    "\n",
+    "this_df = filter_df_by_dict(result_df, base_dict, verbose=True)\n",
+    "\n",
+    "beam_former = BeamFormer()\n",
+    "beam_former.init_dynamic_estimate(combination_n, combination_method, normalization_method)\n",
+    "\n",
+    "combined_heatmap = None\n",
+    "raw_heatmap = None\n",
+    "\n",
+    "for i, row in this_df.iterrows():\n",
+    "    raw_spectrum = row.spectrum_raw # frequencies x angles\n",
+    "    \n",
+    "    # TODO(FD): read orientation from current pose estimate.\n",
+    "    beam_former.add_to_dynamic_estimates(raw_spectrum, orientation=0)\n",
+    "    estimate = beam_former.get_dynamic_estimate()\n",
+    "    \n",
+    "    combined_estimate = combine_rows(estimate, combination_method, keepdims=True)\n",
+    "    combined_estimate = normalize_rows(combined_estimate, method=\"zero_to_one\")\n",
+    "    \n",
+    "    # TODO(FD): could also read this directly from df. Refactor? \n",
+    "    raw_estimate = combine_rows(raw_spectrum, combination_method, keepdims=True)\n",
+    "    raw_estimate = normalize_rows(raw_estimate, method=\"zero_to_one\")\n",
+    "    \n",
+    "    if combined_heatmap is None:\n",
+    "        combined_heatmap = combined_estimate.flatten()\n",
+    "    else:\n",
+    "        combined_heatmap = np.c_[combined_heatmap, combined_estimate.flatten()]\n",
+    "        \n",
+    "    if raw_heatmap is None:\n",
+    "        raw_heatmap = raw_estimate.flatten()\n",
+    "    else:\n",
+    "        raw_heatmap = np.c_[raw_heatmap, raw_estimate.flatten()]\n",
+    "    \n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolormesh(range(combined_heatmap.shape[1]), angles, combined_heatmap)\n",
+    "ax.set_title('combined heatmap')\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolormesh(range(raw_heatmap.shape[1]), angles, raw_heatmap)\n",
+    "ax.set_title('raw heatmap')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## plot angle estimate over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## try to combine different angles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## plot which frequency bins yield the correct angle estimate"
    ]
   }
  ],
