--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -6,13 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from copy import deepcopy\n",
     "import math\n",
     "import sys\n",
-    "from copy import deepcopy\n",
     "\n",
-    "sys.path.append('../crazyflie-audio/python/')\n",
-    "\n",
-    "import IPython\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
     "\n",
@@ -21,7 +18,7 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "np.random.seed(1)"
+    "sys.path.append('../crazyflie-audio/python/')"
    ]
   },
   {
@@ -56,7 +53,15 @@
     "    beam_former = pra.Beamformer(mics_rotated, room.fs)\n",
     "    room.add_microphone_array(beam_former)\n",
     "    room.simulate()\n",
-    "    return deepcopy(room.mic_array.signals), mics_rotated.T"
+    "    return deepcopy(room.mic_array.signals), mics_rotated.T\n",
+    "\n",
+    "\n",
+    "def plot_spectrum(spectrum, degree=0):\n",
+    "    plt.figure()\n",
+    "    plt.pcolormesh(angles, frequencies, np.log10(spectrum))\n",
+    "    plt.axvline(degree, color='red')\n",
+    "    plt.xlabel('angle [deg]')\n",
+    "    plt.ylabel('frequency [Hz]')"
    ]
   },
   {
@@ -69,11 +74,9 @@
     "\n",
     "Fs = 32000  # Hz, sampling frequency\n",
     "\n",
-    "dimension = 2\n",
-    "gt_elevation = None\n",
-    "baseline = 0.108  # 15\n",
-    "duration = 1  # 0.1  # seconds\n",
-    "gt_distance = 1  # distance of source\n",
+    "baseline = 0.108  # meters, square side of mic array\n",
+    "duration = 1  # seconds\n",
+    "gt_distance = 1  # meters, distance of source\n",
     "\n",
     "mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
     "mics_drone += np.random.normal(loc=0, scale=1e-2, size=mics_drone.shape)\n",
@@ -101,10 +104,18 @@
     "\n",
     "n_buffer = 1024\n",
     "time_index = 1000\n",
-    "buffers = [signals_mics[0][:, time_index:time_index + n_buffer] for signals_mics in signals_mics_list] \n",
+    "buffers = [signals_mics[0][:, time_index:time_index + n_buffer] for signals_mics in signals_mics_list] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import cycle\n",
     "\n",
     "plt.figure()\n",
-    "from itertools import cycle\n",
     "ls_cycle = cycle([\":\", \"-\", \"-.\"])\n",
     "for degree, buffer in zip(degrees, buffers):\n",
     "    label = f\"rot {degree}\"\n",
@@ -125,6 +136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# combine spectra"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -133,6 +151,7 @@
     "from audio_stack.beam_former import BeamFormer\n",
     "\n",
     "beam_former = BeamFormer(mic_positions=mics_drone)\n",
+    "angles = beam_former.theta_scan * 180 / np.pi\n",
     "\n",
     "frequencies = np.fft.rfftfreq(n=n_buffer, d=1 / Fs)\n",
     "\n",
@@ -148,30 +167,7 @@
     "for spectrum, degree in zip(spectra, degrees):\n",
     "    beam_former.add_to_dynamic_estimates(spectrum, -degree)\n",
     "\n",
-    "spectrum_dynamic = beam_former.get_dynamic_estimate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angles = beam_former.theta_scan * 180 / np.pi\n",
-    "\n",
-    "def plot_spectrum(spectrum, degree=0):\n",
-    "    plt.figure()\n",
-    "    plt.pcolormesh(angles, frequencies, np.log10(spectrum))\n",
-    "    plt.axvline(degree, color='red')\n",
-    "    plt.xlabel('angle [deg]')\n",
-    "    plt.ylabel('frequency [Hz]')\n",
-    "    \n",
-    "for spectrum, degree in zip(spectra, degrees):\n",
-    "    plot_spectrum(spectrum, gt_angle_deg - degree)\n",
-    "    plt.title(f'rot {degree}')\n",
-    "\n",
-    "plot_spectrum(spectrum_dynamic, gt_angle_deg - degrees[-1])\n",
-    "plt.title(f'dynamic')\n",
+    "combined_spectra = beam_former.get_dynamic_estimate()\n",
     "pass"
    ]
   },
@@ -181,8 +177,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# combine signals in time domain\n",
+    "for spectrum, degree in zip(spectra, degrees):\n",
+    "    plot_spectrum(spectrum, gt_angle_deg - degree)\n",
+    "    plt.title(f'rot {degree}')\n",
     "\n",
+    "plot_spectrum(combined_spectra, gt_angle_deg - degrees[-1])\n",
+    "plt.title(f'combined spectra')\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# combine raw signals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from algos_basics import get_mic_delays_near\n",
     "\n",
     "mics_array = np.concatenate([*mics_list])\n",
@@ -207,10 +223,10 @@
     "signals_f_tot = np.c_[signals_f_tot, signals_fs[-1]] # n_frequencies x 8\n",
     "\n",
     "Rtot = beam_former.get_correlation(signals_f_tot)\n",
-    "spectrum_tot = beam_former.get_das_spectrum(Rtot, frequencies)\n",
+    "combined_raw = beam_former.get_das_spectrum(Rtot, frequencies)\n",
     "\n",
-    "plot_spectrum(spectrum_tot)\n",
-    "plt.title('total')\n",
+    "plot_spectrum(combined_raw)\n",
+    "plt.title('combined raw')\n",
     "pass"
    ]
   },
@@ -221,18 +237,20 @@
    "outputs": [],
    "source": [
     "from audio_stack.spectrum_estimator import combine_rows, normalize_rows\n",
+    "\n",
     "plt.figure()\n",
     "combine = 'sum' \n",
     "normalize = 'sum_to_one'\n",
     "keepdims = True\n",
-    "plt.plot(angles, normalize_rows(combine_rows(spectrum_tot, method=combine, keepdims=keepdims),    \n",
-    "                                method=normalize).flatten(), label='total')\n",
-    "plt.axvline(gt_angle_deg, color='red')\n",
-    "plt.plot(angles, normalize_rows(combine_rows(spectrum_dynamic, method=combine, keepdims=keepdims),\n",
-    "                                method=normalize).flatten(), label='dynamic')\n",
-    "plt.axvline(gt_angle_deg - degrees[-1], color='red')\n",
+    "plt.plot(angles, normalize_rows(combine_rows(combined_spectra, method=combine, keepdims=keepdims),    \n",
+    "                                method=normalize).flatten(), label='combined spectra')\n",
+    "plt.axvline(gt_angle_deg - degrees[-1], color='C0', ls=':', label='gt')\n",
+    "plt.plot(angles, normalize_rows(combine_rows(combined_raw, method=combine, keepdims=keepdims),\n",
+    "                                method=normalize).flatten(), label='combined raw')\n",
+    "plt.axvline(gt_angle_deg, color='C1', ls=':', label='gt')\n",
     "#plt.yscale('log')\n",
     "#plt.ylim(1e-5, 1e-3)\n",
+    "plt.title('comparison spectra vs. raw combination')\n",
     "plt.xlabel('angle [deg]')\n",
     "plt.ylabel('probability [-]')\n",
     "plt.legend()"
