Add frequency bin selection

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -73,14 +73,16 @@
     "from mic_array import get_square_array\n",
     "\n",
     "Fs = 32000  # Hz, sampling frequency\n",
+    "select_bins = False #True\n",
     "\n",
     "baseline = 0.108  # meters, square side of mic array\n",
     "duration = 1  # seconds\n",
     "gt_distance = 1  # meters, distance of source\n",
+    "add_noise_mics_positions = 0 #1e-2\n",
     "\n",
     "mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
-    "mics_drone += np.random.normal(loc=0, scale=1e-2, size=mics_drone.shape)\n",
-    "print(mics_drone.shape)\n",
+    "if add_noise_mics_positions > 0:\n",
+    "    mics_drone += np.random.normal(scale=add_noise_mics_positions, size=mics_drone.shape)\n",
     "\n",
     "gt_angle_deg = 90\n",
     "gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
@@ -95,6 +97,7 @@
    "source": [
     "#degrees = [0, 0]\n",
     "#degrees = range(10)\n",
+    "#degrees = np.arange(0, 360, 45)\n",
     "degrees = [0, 10, 20, 30]\n",
     "\n",
     "# 4 x n_times\n",
@@ -149,16 +152,21 @@
    "outputs": [],
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
+    "from bin_selection import select_frequencies\n",
     "\n",
     "beam_former = BeamFormer(mic_positions=mics_drone)\n",
     "angles = beam_former.theta_scan * 180 / np.pi\n",
     "\n",
     "frequencies = np.fft.rfftfreq(n=n_buffer, d=1 / Fs)\n",
-    "\n",
     "signals_fs = [np.fft.rfft(buffer).T for buffer in buffers] # n_frequences x 4\n",
+    "\n",
+    "if select_bins:\n",
+    "    indices = select_frequencies(n_buffer, Fs, min_freq=200, max_freq=7000)\n",
+    "    frequencies = frequencies[indices]\n",
+    "    signals_fs = [signals_f[indices, :] for signals_f in signals_fs]\n",
+    "    \n",
     "Rs = [beam_former.get_correlation(signals_f) for signals_f in signals_fs]\n",
     "\n",
-    "# TODO: select 32 frequency bins\n",
     "spectra = [beam_former.get_das_spectrum(R, frequencies) for R in Rs]\n",
     "\n",
     "combination_method = \"sum\"\n",
@@ -199,34 +207,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from algos_basics import get_mic_delays_near\n",
+    "from algos_basics import get_mic_delays\n",
     "\n",
     "mics_array = np.concatenate([*mics_list])\n",
     "beam_former = BeamFormer(mic_positions=mics_array)\n",
     "\n",
-    "# find relative delay between the reference mic\n",
-    "# at position i and latest \n",
-    "\n",
     "ref_mics = mics_list[-1]\n",
     "signals_fs_delayed = []\n",
     "\n",
-    "signals_f_tot = np.empty((len(frequencies), 0))\n",
+    "signals_f_tot_zero = np.empty((len(frequencies), 0))\n",
+    "signals_f_tot_delay = np.empty((len(frequencies), 0))\n",
     "\n",
     "for i, (mics, signals_f) in enumerate(zip(mics_list[:-1], signals_fs[:-1])):\n",
     "    mics_ref = np.r_[[mics[0]], [ref_mics[0]]]\n",
     "    \n",
-    "    delay = get_mic_delays_near(mics_ref, source=source)[1]\n",
-    "    \n",
+    "    # TODO(FD) we assume knowledge of the source here. \n",
+    "    # ideally, we would move this inside the beamforming algorithm!\n",
+    "    delay = get_mic_delays(mics_ref, azimuth=gt_angle_rad)[1]\n",
     "    signals_f_delayed = np.multiply(signals_f, np.exp(-1j * 2 * np.pi * frequencies * delay)[:, None])\n",
-    "    signals_f_tot = np.c_[signals_f_tot, signals_f_delayed]\n",
+    "    signals_f_tot_delay = np.c_[signals_f_tot_delay, signals_f_delayed]\n",
+    "    \n",
+    "    signals_f_tot_zero = np.c_[signals_f_tot_zero, signals_f]\n",
     "\n",
-    "signals_f_tot = np.c_[signals_f_tot, signals_fs[-1]] # n_frequencies x 8\n",
+    "signals_f_tot_zero = np.c_[signals_f_tot_zero, signals_fs[-1]] # n_frequencies x 8\n",
+    "signals_f_tot_delay = np.c_[signals_f_tot_delay, signals_fs[-1]] # n_frequencies x 8\n",
     "\n",
-    "Rtot = beam_former.get_correlation(signals_f_tot)\n",
-    "combined_raw = beam_former.get_das_spectrum(Rtot, frequencies)\n",
+    "Rtot_zero = beam_former.get_correlation(signals_f_tot_zero)\n",
+    "combined_raw_zero = beam_former.get_das_spectrum(Rtot_zero, frequencies)\n",
     "\n",
-    "plot_spectrum(combined_raw)\n",
-    "plt.title('combined raw')\n",
+    "Rtot_delay = beam_former.get_correlation(signals_f_tot_delay)\n",
+    "combined_raw_delay = beam_former.get_das_spectrum(Rtot_delay, frequencies)\n",
+    "\n",
+    "plot_spectrum(combined_raw_delay)\n",
+    "plt.title('combined raw with correct delay')\n",
+    "\n",
+    "plot_spectrum(combined_raw_zero)\n",
+    "plt.title('combined raw with zero delay')\n",
     "pass"
    ]
   },
@@ -244,17 +260,27 @@
     "keepdims = True\n",
     "plt.plot(angles, normalize_rows(combine_rows(combined_spectra, method=combine, keepdims=keepdims),    \n",
     "                                method=normalize).flatten(), label='combined spectra')\n",
-    "plt.axvline(gt_angle_deg - degrees[-1], color='C0', ls=':', label='gt')\n",
-    "plt.plot(angles, normalize_rows(combine_rows(combined_raw, method=combine, keepdims=keepdims),\n",
-    "                                method=normalize).flatten(), label='combined raw')\n",
-    "plt.axvline(gt_angle_deg, color='C1', ls=':', label='gt')\n",
-    "#plt.yscale('log')\n",
-    "#plt.ylim(1e-5, 1e-3)\n",
+    "plt.axvline(gt_angle_deg - degrees[-1], color='C0', ls=':')\n",
+    "plt.plot(angles, normalize_rows(combine_rows(combined_raw_delay, method=combine, keepdims=keepdims),\n",
+    "                                method=normalize).flatten(), label='combined raw, correct delay')\n",
+    "plt.axvline(gt_angle_deg, color='C1', ls=':')\n",
+    "plt.plot(angles, normalize_rows(combine_rows(combined_raw_zero, method=combine, keepdims=keepdims),\n",
+    "                                method=normalize).flatten(), label='combined raw, zero delay')\n",
+    "plt.axvline(gt_angle_deg, color='C2', ls=':')\n",
+    "plt.yscale('log')\n",
+    "plt.ylim(1e-3, None)\n",
     "plt.title('comparison spectra vs. raw combination')\n",
     "plt.xlabel('angle [deg]')\n",
     "plt.ylabel('probability [-]')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
