Add some documentation

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -53,8 +53,7 @@
     "    beam_former = pra.Beamformer(mics_rotated, room.fs)\n",
     "    room.add_microphone_array(beam_former)\n",
     "    room.simulate()\n",
-    "    return deepcopy(room.mic_array.signals), mics_rotated.T\n",
-    "\n",
+    "    return deepcopy(room.mic_array.signals)\n",
     "\n",
     "def plot_spectrum(spectrum, degree=0):\n",
     "    plt.figure()\n",
@@ -84,7 +83,7 @@
     "if add_noise_mics_positions > 0:\n",
     "    mics_drone += np.random.normal(scale=add_noise_mics_positions, size=mics_drone.shape)\n",
     "\n",
-    "gt_angle_deg = 90\n",
+    "gt_angle_deg = 45 #75\n",
     "gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
     "source = gt_distance * np.array([np.cos(gt_angle_rad), np.sin(gt_angle_rad)])"
    ]
@@ -100,14 +99,13 @@
     "#degrees = np.arange(0, 360, 45)\n",
     "degrees = [0, 10, 20, 30]\n",
     "\n",
-    "# 4 x n_times\n",
     "np.random.seed(1)\n",
     "mics_list = [rotate_mics(mics_drone, orientation_deg=degree) for degree in degrees]\n",
-    "signals_mics_list = [generate_signals(mics.T) for mics in mics_list] \n",
+    "signals_list = [generate_signals(mics.T) for mics in mics_list] # 4 x n_times\n",
     "\n",
     "n_buffer = 1024\n",
     "time_index = 1000\n",
-    "buffers = [signals_mics[0][:, time_index:time_index + n_buffer] for signals_mics in signals_mics_list] "
+    "buffers = [signals_mics[:, time_index:time_index + n_buffer] for signals_mics in signals_list] "
    ]
   },
   {
@@ -157,6 +155,7 @@
     "beam_former = BeamFormer(mic_positions=mics_drone)\n",
     "angles = beam_former.theta_scan * 180 / np.pi\n",
     "\n",
+    "# calculate individual spectra for each pose\n",
     "frequencies = np.fft.rfftfreq(n=n_buffer, d=1 / Fs)\n",
     "signals_fs = [np.fft.rfft(buffer).T for buffer in buffers] # n_frequences x 4\n",
     "\n",
@@ -166,9 +165,9 @@
     "    signals_fs = [signals_f[indices, :] for signals_f in signals_fs]\n",
     "    \n",
     "Rs = [beam_former.get_correlation(signals_f) for signals_f in signals_fs]\n",
-    "\n",
     "spectra = [beam_former.get_das_spectrum(R, frequencies) for R in Rs]\n",
     "\n",
+    "# combine the individual spectra, accounting for the orientation of the drone\n",
     "combination_method = \"sum\"\n",
     "normalization_method = \"zero_to_one\"\n",
     "beam_former.init_dynamic_estimate(combination_n=len(degrees), combination_method=combination_method, normalization_method=normalization_method)\n",
@@ -212,21 +211,31 @@
     "mics_array = np.concatenate([*mics_list])\n",
     "beam_former = BeamFormer(mic_positions=mics_array)\n",
     "\n",
+    "# we use the last position as our reference position. \n",
     "ref_mics = mics_list[-1]\n",
+    "\n",
     "signals_fs_delayed = []\n",
     "\n",
     "signals_f_tot_zero = np.empty((len(frequencies), 0))\n",
     "signals_f_tot_delay = np.empty((len(frequencies), 0))\n",
     "\n",
     "for i, (mics, signals_f) in enumerate(zip(mics_list[:-1], signals_fs[:-1])):\n",
+    "    \n",
+    "    # the first mic is used as reference for delays, so we need to \n",
+    "    # align the signals by calculating that delay. \n",
     "    mics_ref = np.r_[[mics[0]], [ref_mics[0]]]\n",
     "    \n",
     "    # TODO(FD) we assume knowledge of the source here. \n",
-    "    # ideally, we would move this inside the beamforming algorithm!\n",
+    "    # ideally, we would move this inside the beamforming algorithm: \n",
+    "    # regenerate the signal for candidate angle\n",
     "    delay = get_mic_delays(mics_ref, azimuth=gt_angle_rad)[1]\n",
-    "    signals_f_delayed = np.multiply(signals_f, np.exp(-1j * 2 * np.pi * frequencies * delay)[:, None])\n",
+    "    print(\"delay:\", delay)\n",
+    "    \n",
+    "    signals_f_delayed = np.multiply(signals_f, np.exp(1j * 2 * np.pi * frequencies * delay)[:, None])\n",
     "    signals_f_tot_delay = np.c_[signals_f_tot_delay, signals_f_delayed]\n",
     "    \n",
+    "    # for testing purposes, we also look at the spectra without compensating\n",
+    "    # for the delays.\n",
     "    signals_f_tot_zero = np.c_[signals_f_tot_zero, signals_f]\n",
     "\n",
     "signals_f_tot_zero = np.c_[signals_f_tot_zero, signals_fs[-1]] # n_frequencies x 8\n",
@@ -247,6 +256,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# create \"real\" multi-mic array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signals_multimic = generate_signals(mics_array.T)\n",
+    "buffer = signals_multimic[:, time_index:time_index + n_buffer]\n",
+    "signals_f = np.fft.rfft(buffer).T\n",
+    "\n",
+    "if select_bins:\n",
+    "    frequencies = frequencies[indices]\n",
+    "    signals_f = signals_f[indices, :]\n",
+    "R = beam_former.get_correlation(signals_f)\n",
+    "spectrum = beam_former.get_das_spectrum(R, frequencies)\n",
+    "plot_spectrum(spectrum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# compare results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -254,26 +295,45 @@
    "source": [
     "from audio_stack.spectrum_estimator import combine_rows, normalize_rows\n",
     "\n",
-    "plt.figure()\n",
+    "angles_plot = angles * np.pi / 180\n",
+    "    \n",
     "combine = 'sum' \n",
     "normalize = 'sum_to_one'\n",
     "keepdims = True\n",
-    "plt.plot(angles, normalize_rows(combine_rows(combined_spectra, method=combine, keepdims=keepdims),    \n",
+    "\n",
+    "projection = None; yscale = 'linear'#yscale = 'log'\n",
+    "#projection = 'polar'; yscale = 'linear'\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "ax = fig.add_subplot(111, projection=projection)\n",
+    "ax.plot(angles_plot, normalize_rows(combine_rows(combined_spectra, method=combine, keepdims=keepdims),    \n",
     "                                method=normalize).flatten(), label='combined spectra')\n",
-    "plt.axvline(gt_angle_deg - degrees[-1], color='C0', ls=':')\n",
-    "plt.plot(angles, normalize_rows(combine_rows(combined_raw_delay, method=combine, keepdims=keepdims),\n",
-    "                                method=normalize).flatten(), label='combined raw, correct delay')\n",
-    "plt.axvline(gt_angle_deg, color='C1', ls=':')\n",
-    "plt.plot(angles, normalize_rows(combine_rows(combined_raw_zero, method=combine, keepdims=keepdims),\n",
-    "                                method=normalize).flatten(), label='combined raw, zero delay')\n",
-    "plt.axvline(gt_angle_deg, color='C2', ls=':')\n",
-    "plt.yscale('log')\n",
-    "plt.ylim(1e-3, None)\n",
-    "plt.title('comparison spectra vs. raw combination')\n",
-    "plt.xlabel('angle [deg]')\n",
-    "plt.ylabel('probability [-]')\n",
-    "plt.legend()"
+    "ax.plot(angles_plot, normalize_rows(combine_rows(combined_raw_delay, method=combine, keepdims=keepdims),\n",
+    "                             method=normalize).flatten(), label='combined raw, correct delay')\n",
+    "ax.plot(angles_plot, normalize_rows(combine_rows(combined_raw_zero, method=combine, keepdims=keepdims),\n",
+    "                             method=normalize).flatten(), label='combined raw, zero delay')\n",
+    "ax.plot(angles_plot, normalize_rows(combine_rows(spectrum, method=combine, keepdims=keepdims),\n",
+    "                                method=normalize).flatten(), label='multi-mic-array')\n",
+    "ax.axvline(np.pi / 180 * (gt_angle_deg - degrees[-1]), color='C0', ls=':')\n",
+    "ax.axvline(np.pi / 180 * (gt_angle_deg), color='C1', ls=':')\n",
+    "ax.axvline(np.pi / 180 * (gt_angle_deg), color='C2', ls=':')\n",
+    "ax.axvline(np.pi / 180 * (gt_angle_deg), color='C3', ls=':')\n",
+    "ax.set_ylim(1e-3, None)\n",
+    "ax.set_title('comparison spectra vs. raw combination')\n",
+    "ax.set_xlabel('angle [rad]')\n",
+    "ax.set_ylabel('probability [-]')\n",
+    "ax.legend()\n",
+    "ax.set_yscale(yscale)\n",
+    "pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
