More plotting and comments

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -168,8 +168,10 @@
     "spectra = [beam_former.get_das_spectrum(R, frequencies) for R in Rs]\n",
     "\n",
     "# combine the individual spectra, accounting for the orientation of the drone\n",
-    "combination_method = \"sum\"\n",
-    "normalization_method = \"zero_to_one\"\n",
+    "#combination_method = \"sum\"\n",
+    "normalization_method = \"sum_to_one\"\n",
+    "#normalization_method = \"zero_to_one\"\n",
+    "combination_method = \"product\"\n",
     "beam_former.init_dynamic_estimate(combination_n=len(degrees), combination_method=combination_method, normalization_method=normalization_method)\n",
     "for spectrum, degree in zip(spectra, degrees):\n",
     "    beam_former.add_to_dynamic_estimates(spectrum, -degree)\n",
