--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -52,7 +52,7 @@
     "def plot_soundlevel(df, label, ax=None):\n",
     "    if ax is None:\n",
     "        fig, ax = plt.subplots()\n",
-    "    ax.semilogy(df.timestamp_s, df.sound_level, label=label)\n",
+    "    ax.semilogy(df.timestamp_s, df.sound_level, label=label, marker=\"o\")\n",
     "    ax.set_xlabel('time [s]')\n",
     "    ax.set_ylabel('sound level')\n",
     "    \n",
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import  CSV_DIRNAME, WAV_DIRNAME, FS \n",
+    "from evaluate_data import CSV_DIRNAME, WAV_DIRNAME, FS \n",
     "from evaluate_data import read_df, get_spectrogram, add_soundlevel"
    ]
   },
@@ -96,7 +96,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compare sound levels"
+    "## Compare sound levels\n",
+    "\n",
+    "### combined"
    ]
   },
   {
@@ -106,12 +108,9 @@
    "outputs": [],
    "source": [
     "duration = 10 * 1e3 # miliseconds from end\n",
-    "degree = 0\n",
-    "snr = False\n",
-    "props = False\n",
     "\n",
-    "df_source = read_df(degree=degree, props=False, snr=snr, motors=False, source=True)\n",
-    "df_all = read_df(degree=degree, props=props, snr=snr, motors=True, source=True)\n",
+    "df_source = read_df(degree=0, props=False, snr=False, motors=False, source=True)\n",
+    "df_all = read_df(degree=0, props=False, snr=False, motors=True, source=True)\n",
     "df_props = read_df(degree=0, props=False, snr=False, motors=True, source=False)\n",
     "\n",
     "spectrogram_source = get_spectrogram(df_source)\n",
@@ -135,12 +134,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### individual"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "sound_levels = np.abs(np.array([*df_all.loc[:, \"signals_f\"]]))\n",
+    "print(sound_levels.shape)\n",
     "\n",
+    "skip = 5\n",
+    "n_times = sound_levels.shape[0]\n",
+    "n_mics = sound_levels.shape[1]\n",
+    "n_freqs = sound_levels.shape[2]\n",
+    "\n",
+    "times = df_all.timestamp_s.values\n",
+    "frequencies = df_all.iloc[0].frequencies\n",
+    "\n",
+    "fig, axs = plt.subplots(n_mics, sharex=True)\n",
+    "fig.set_size_inches(10,10)\n",
+    "for mic_i in range(n_mics):\n",
+    "    axs[mic_i].set_title(f'mic{mic_i}')\n",
+    "    for j in range(n_freqs)[::skip]:\n",
+    "        axs[mic_i].plot(times, sound_levels[:, mic_i, j], label=f\"{frequencies[j]}Hz\")\n",
+    "    axs[mic_i].plot(times, np.median(sound_levels[:, mic_i, :], axis=-1), label=\"mean\", color='black', linewidth=2.0)\n",
+    "[ax.set_yscale('log') for ax in axs]\n",
+    "axs[0].legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fname_source = f'{WAV_DIRNAME}/crazyflie_audio_measurements_nomotors_nosnr_noprops_source_45.wav'\n",
     "fname_all =    f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_source_45.wav'\n",
     "fname_props =  f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
@@ -219,6 +252,7 @@
    "outputs": [],
    "source": [
     "import itertools\n",
+    "from copy import deepcopy\n",
     "from evaluate_data import degree_list, method_list, combine_list, normalize_list\n",
     "\n",
     "def filter_df_by_dict(result_df, this_dict, verbose=False):\n",
@@ -232,15 +266,19 @@
     "            break\n",
     "    return this_df\n",
     "\n",
-    "def plot_spectrum(full_spectrum, title='', ax=None):\n",
-    "    angles = np.linspace(0, 360, full_spectrum.shape[0])\n",
+    "def plot_spectrum(full_spectrum, title='', ax=None, log=False, eps=1e-30):\n",
     "    if ax is None:\n",
     "        fig, ax = plt.subplots()\n",
     "    else:\n",
     "        fig = plt.gcf()\n",
     "        \n",
     "    fig.set_size_inches(10, 5)\n",
-    "    ax.pcolormesh(range(full_spectrum.shape[1]), angles, np.log(full_spectrum))\n",
+    "    if log:\n",
+    "        full_spectrum = deepcopy(full_spectrum)\n",
+    "        full_spectrum[full_spectrum <= eps] = np.nan\n",
+    "        ax.pcolormesh(range(full_spectrum.shape[1]), angles, np.log(full_spectrum))\n",
+    "    else:\n",
+    "        ax.pcolormesh(range(full_spectrum.shape[1]), angles, full_spectrum)\n",
     "    ax.set_xlabel('time idx [-]')\n",
     "    ax.set_ylabel('angle [deg]')\n",
     "    ax.set_title(title)\n",
@@ -258,32 +296,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A. Ideal case: what is best combination of method+combine+normalize? "
+    "## A. Ideal case: what is best combination of method+combine+normalize? \n",
+    "\n",
+    "Most combinations work fine, this is probably not an important factor."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "from audio_stack.spectrum_estimator import normalize_rows\n",
+    "\n",
     "base_dict = dict(\n",
     "    motors=False,\n",
     "    props=False,\n",
     "    snr=False, \n",
-    "    degree=None, # will be set later\n",
+    "    degree=0, \n",
+    "    # will be set later\n",
     "    method=None,\n",
     "    combine=None,\n",
     "    normalize=None\n",
     ")\n",
     "\n",
-    "for degree, method, normalize, combine in itertools.product(degree_list, method_list, normalize_list, combine_list):\n",
-    "    gt_degree = 180 - degree\n",
-    "    \n",
+    "normalize_colors = {norm: f\"C{i}\" for i, norm in enumerate(normalize_list)}\n",
+    "#combine_ls = {\"product\": \":\", \"sum\": \"-\"}\n",
+    "method_ls = {\"mvdr\": \":\", \"das\": \"-\"}\n",
+    "\n",
+    "fig_tot, ax_list = plt.subplots(1, len(combine_list), sharex=True, sharey=False)\n",
+    "fig_tot.set_size_inches(10, 5)\n",
+    "ax_dict = dict(zip(combine_list, ax_list))\n",
+    "[ax.set_title(title) for title, ax in ax_dict.items()]\n",
+    "\n",
+    "for method, normalize, combine in itertools.product(method_list, normalize_list, combine_list):\n",
     "    this_dict = base_dict.copy()\n",
-    "    this_dict[\"degree\"] = degree\n",
     "    this_dict[\"method\"] = method\n",
     "    this_dict[\"combine\"] = combine\n",
     "    this_dict[\"normalize\"] = normalize\n",
@@ -292,27 +341,43 @@
     "    if not len(this_df):\n",
     "        continue \n",
     "        \n",
+    "    gt_degree = 180 - this_dict[\"degree\"]\n",
+    "        \n",
     "    # angles x times\n",
     "    full_spectrum = np.array([*this_df.loc[:, \"spectrum\"]]).T\n",
-    "    title = f\"{degree} deg, method:{method}, normalize:{normalize}, combine:{combine}\"\n",
+    "    title = f\"method:{method}, normalize:{normalize}, combine:{combine}\"\n",
+    "    \n",
+    "    full_spectrum = normalize_rows(full_spectrum.T, method=\"zero_to_one_all\").T\n",
+    "    \n",
+    "    angles = np.linspace(0, 360, full_spectrum.shape[0])\n",
+    "    full_spectrum = normalize_rows(full_spectrum.T, method=\"sum_to_one\").T\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
-    "    plot_spectrum(full_spectrum, title=title, ax=ax)\n",
-    "    ax.axhline(gt_degree, color='orange', ls=':')"
+    "    plot_spectrum(full_spectrum, title=title, ax=ax, log=True)\n",
+    "    ax.axhline(gt_degree, color='orange', ls=':')\n",
+    "    \n",
+    "    mean_spectrum = np.mean(full_spectrum, axis=1)\n",
+    "    label = f\"{str.upper(method)}, {normalize}\"\n",
+    "    ax_dict[combine].semilogy(angles, mean_spectrum, color=normalize_colors[normalize], \n",
+    "                ls=method_ls[method], label=label)\n",
+    "ax_list[1].legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
+    "[ax.set_xlabel(\"angle [deg]\") for ax in ax_list]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## B. no motors: does it help to use high-SNR bins? "
+    "## B. no motors: does it help to use high-SNR bins? \n",
+    "\n",
+    "It doesn't help."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -351,7 +416,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## C. motors: what filtering helps? "
+    "## C. motors: what filtering helps? \n",
+    "\n",
+    "Findings:\n",
+    "- SNR filtering throws off results.\n",
+    "- propeller filtering doesn't hurt, but also doesn't seem to help significantly. It might help a little bit to get better DOA estimates at low SNR. \n",
+    "\n",
+    "TODO: quantify the second hypothesis"
    ]
   },
   {
@@ -374,6 +445,11 @@
     "    snr=None, \n",
     "    props=None, # will be filled later\n",
     ")\n",
+    "\n",
+    "fig_tot, ax_list = plt.subplots(len(degree_list), 2)\n",
+    "fig_tot.set_size_inches(10, 10)\n",
+    "ax_dict_time = dict(zip(degree_list, ax_list[:, 0]))\n",
+    "ax_dict_cdf = dict(zip(degree_list, ax_list[:, 1]))\n",
     "\n",
     "for degree, snr, props in itertools.product(degree_list, [False, True], [False, True]):\n",
     "    gt_degree = 180 - degree\n",
@@ -407,14 +483,31 @@
     "    ax2.plot(combine_rows(full_spectrum.T, \"product\"), angles)\n",
     "    ax2.axhline(gt_degree, color='orange', ls=':')\n",
     "    ax2.set_title('product')\n",
-    "    #axs[1].invert_xaxis()"
+    "    #axs[1].invert_xaxis()\n",
+    "    \n",
+    "    label = f\"snr:{snr}, props:{props}\"\n",
+    "    angle_errors = angles[np.argmax(full_spectrum, axis=0)]\n",
+    "    ax_dict_time[degree].scatter(range(full_spectrum.shape[1]), angle_errors, label=label)\n",
+    "    ax_dict_time[degree].axhline(gt_degree, color='black')\n",
+    "    ax_dict_time[degree].set_ylabel('angle [deg]')\n",
+    "    \n",
+    "    sorted_errors = sorted(np.abs(angle_errors - gt_degree))\n",
+    "    probs = np.linspace(0, 1, len(sorted_errors))\n",
+    "    ax_dict_cdf[degree].plot(sorted_errors, probs, label=label)\n",
+    "    ax_dict_cdf[degree].legend(loc='lower right')\n",
+    "    \n",
+    "ax_dict_time[degree].set_xlabel('time idx [-]')\n",
+    "ax_dict_cdf[degree].set_xlabel('abs angle error [deg]')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## D. Understand why SNR selection is not helping"
+    "## D. Understand why SNR selection is not helping\n",
+    "\n",
+    "Findings: \n",
+    "- Looks like SNR selection doesn't help because most high-SNR are at low frequencies and potentially come from popeller noise. We need to either put up the freq_min to above 1500 degree or similar, or increase delta_freq for propeller filtering. "
    ]
   },
   {
@@ -433,7 +526,10 @@
     "    snr=None, # will be filled later\n",
     ")\n",
     "\n",
-    "n_times = 4\n",
+    "time_indices = range(90, 100)\n",
+    "n_times = len(time_indices)\n",
+    "\n",
+    "min_freq = 1500\n",
     "\n",
     "for snr, in itertools.product([False, True]):\n",
     "    this_dict = base_dict.copy()\n",
@@ -453,24 +549,22 @@
     "    fig.suptitle(f\"snr:{snr}\")\n",
     "    fig.set_size_inches(10, 5)\n",
     "    for i in range(n_times):\n",
-    "        raw_spectrum_flat = raw_spectrum[:, -i, :]\n",
+    "        frequencies = this_df.iloc[time_indices[i]].frequencies\n",
     "        \n",
-    "        frequencies = this_df.iloc[i].frequencies\n",
-    "        axs[i].pcolormesh(frequencies, angles, raw_spectrum_flat)\n",
-    "        axs[i].set_title(f\"time -{i}\")\n",
+    "        frequencies_chosen = frequencies[frequencies > min_freq]\n",
+    "        print('frequencies_chosen:', frequencies_chosen)\n",
+    "        \n",
+    "        raw_spectrum_flat = raw_spectrum[:, time_indices[i], frequencies > min_freq]\n",
+    "        axs[i].pcolormesh(range(len(frequencies_chosen)), angles, raw_spectrum_flat)\n",
+    "        axs[i].set_title(f\"time {time_indices[i]}\")\n",
     "        axs[i].axhline(gt_degree, color='orange', ls=':')\n",
     "        \n",
     "    raw_spectrum_sum = np.sum(raw_spectrum[:, -n_times:, :].reshape(raw_spectrum.shape[0],-1), axis=1)\n",
     "    raw_spectrum_product = np.sum(np.log10(raw_spectrum[:, -n_times:, :]).reshape(raw_spectrum.shape[0],-1), axis=1)\n",
     "    axs[-2].plot(raw_spectrum_sum, angles)\n",
-    "    axs[-1].plot(raw_spectrum_product, angles)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## E. Understand which frequency bins the SNR scheme picks (and try to pick better ones)"
+    "    axs[-1].plot(raw_spectrum_product, angles)\n",
+    "    axs[-2].set_title('sum')\n",
+    "    axs[-1].set_title('product')"
    ]
   },
   {
@@ -600,12 +694,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## try to combine different angles"
+    "# G. Evaluate frequency bins\n",
+    "\n",
+    "plot which frequency bins yield the correct angle estimate, to see which frequency range\n",
+    "we should be using"
    ]
   },
   {
@@ -614,8 +709,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## plot which frequency bins yield the correct angle estimate"
+    "from audio_stack.beam_former import BeamFormer\n",
+    "from audio_stack.spectrum_estimator import normalize_rows\n",
+    "\n",
+    "base_dict = dict(\n",
+    "    motors=True,\n",
+    "    method='mvdr',\n",
+    "    combine='sum',\n",
+    "    normalize='zero_to_one',\n",
+    "    degree=None, # 20 does not exist\n",
+    "    props=False, \n",
+    "    snr=False,\n",
+    ")\n",
+    "n_frequencies = 32\n",
+    "min_time_idx = 80 \n",
+    "counter = {j:[] for j in range(n_frequencies)}\n",
+    "\n",
+    "heatmap = np.zeros((n_frequencies, len(angles)))\n",
+    "\n",
+    "for degree in [0]:\n",
+    "    gt_degree = 180 - degree\n",
+    "    print(gt_degree)\n",
+    "    \n",
+    "    this_dict = base_dict.copy()\n",
+    "    this_dict[\"degree\"] = degree\n",
+    "    \n",
+    "    this_df = filter_df_by_dict(result_df, this_dict, verbose=False)\n",
+    "    frequencies = this_df.iloc[0].frequencies\n",
+    "\n",
+    "    for i, row in this_df.iloc[min_time_idx:].iterrows():\n",
+    "        raw_spectrum = row.spectrum_raw # frequencies x angles\n",
+    "\n",
+    "        # for each frequency bin, find out the angle estimate.\n",
+    "        for j in range(n_frequencies):\n",
+    "            angle_idx = np.argmax(raw_spectrum[j, :])\n",
+    "            angle_error = abs(angles[angle_idx] - gt_degree)\n",
+    "            counter[j].append(angle_error)\n",
+    "            \n",
+    "            heatmap[j, angle_idx] += 1\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "for freq, error_list in counter.items():\n",
+    "    ax.scatter([frequencies[freq]]*len(error_list), error_list, alpha=0.1)\n",
+    "ax.set_xlabel('frequency')\n",
+    "ax.set_ylabel('counter')\n",
+    "ax.set_title('angle error')\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pcolormesh(frequencies, angles, heatmap.T)\n",
+    "ax.set_xlabel('frequency')\n",
+    "ax.set_ylabel('angle [deg]')\n",
+    "ax.set_title('counter of angle estimates')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
